GUI V2.4
- Clean up GUI_JPanel
- Add Iterator pattern
- Add Winners labels

TODO:
- Remaining patterns (state/snapshot)
- 3assem (stacks)
- Add sounds